# FoundryEngine

./: .gitignore  CMakeLists.txt  MainEngine.sln  README.md
Assets/Shaders/: DebugColor.vs  FlatColor.vs  FlatModel.vs  Textured.fs  Textured.vs  TexturedModel.fs  TexturedModel.vs
Common/Core/: Utils.h
Core/: Core.vcxproj  Core.vcxproj.filters
Core/source/: Geometry3D.cpp  Matrices.cpp  Matrices.h  Utils.cpp
GraphicsEngine/: cpp.hint
GraphicsEngine/source/: Camera.cpp  Camera.h  GraphicsApi.cpp  GraphicsApi.h  MeshBuffer.cpp  MeshBuffer.h  MeshRenderer.cpp  MeshRenderer.h  TextureLoader.cpp
MainEngine/Assets/Shaders/: TexturedModel.vs
MainEngine/Modules/GraphicsEngine/: GraphicsApi.h  GraphicsTypes.h
MainEngine/Modules/PhysicsEngine/: PhysicsApi.h
MainEngine/source/: Main.cpp
PhysicsEngine/: PhysicsEngine.vcxproj  PhysicsEngine.vcxproj.filters  cpp.hint
PhysicsEngine/source/: Collisions3D.cpp  Collisions3D.h  PhysicsApi.cpp  PhysicsApi.h  PhysicsSystem.cpp  PhysicsSystem.h  Rigidbody.h  RigidbodyVolume.cpp  RigidbodyVolume.h
app/FoundryEngine/: App.cpp  CMakeLists.txt
app/FoundryEngine/GameplayObjects/: PlayerObject.h
app/MainEngine/: CMakeLists.txt  Main.cpp  MainEngine.vcxproj  MainEngine.vcxproj.filters
app/MainEngine/GameplayObjects/: PlayerObject.cpp  PlayerObject.h
modules/Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters
modules/Core/include/Core/: Geometry3D.h  Matrices.h  Utils.h  Vectors.h
modules/Core/src/: Geometry3D.cpp  Matrices.cpp  Utils.cpp  Vectors.cpp
modules/Debugger/: CMakeLists.txt  Debugger.vcxproj  Debugger.vcxproj.filters
modules/Debugger/include/Debugger/: DebugRenderer.h
modules/Debugger/src/: DebugRenderer.cpp
modules/EngineInterfaces/: CMakeLists.txt
modules/EngineInterfaces/include/EngineInterfaces/: GraphicsPublicData.h  IGraphics.h  IPhysics.h  PhysicsInterfaces.h  PhysicsTypes.h
modules/GraphicsEngine/: CMakeLists.txt  GraphicsEngine.vcxproj  GraphicsEngine.vcxproj.filters
modules/GraphicsEngine/include/GraphicsEngine/: Camera.h  GraphicsApi.h  GraphicsData.h  Mesh.h  MeshBuffer.h  MeshFactory.h  MeshRenderer.h  TextureLoader.h
modules/GraphicsEngine/src/: Camera.cpp  GraphicsApi.cpp  MeshBuffer.cpp  MeshFactory.cpp  MeshRenderer.cpp  ShaderLoader.cpp  TextureLoader.cpp
modules/PhysicsEngine/: CMakeLists.txt  PhysicsEngine.vcxproj  PhysicsEngine.vcxproj.filters
modules/PhysicsEngine/include/PhysicsEngine/: Collisions3D.h  PhysicsApi.h  PhysicsContext.h  PhysicsSystem.h  Rigidbody.h  RigidbodyVolume.h
modules/PhysicsEngine/src/: Collisions3D.cpp  PhysicsApi.cpp  PhysicsContext.cpp  PhysicsSystem.cpp  RigidbodyVolume.cpp
